language/move-lang/tests/move_check/parser/attribute_no_closing_bracket.exp
error: 

   ┌── tests/move_check/parser/attribute_no_closing_bracket.move:4:5 ───
   │
 4 │     fun foo() {}
   │     ^ Expected ']'
   ·
 3 │     #[attr = 0
   │      - To match this '['
   │

