language/move-lang/tests/move_check/parser/attribute_no_closing_bracket.move
module 0x42::M {
    // Errors expecting a ']'
    #[attr = 0
    fun foo() {}
}
